style: fix layout on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -191,3 +191,9 @@
 		transform: translateX(100%);
 	}
 }
+
+.contact-me {
+	@apply p-4 text-primary mx-auto;
+	width: 95vw;
+	max-width: 500px;
+}
